fixing routes and swagger error in user controller, and add not null and unique in the gorm of the dbmodel when needed
